log.txt
==> Notice: Build may be slow as Theos isn’t using all available CPU cores on this computer. Consider upgrading GNU Make: https://theos.dev/docs/parallel-building
> Making all for bundle HelloWorldATV…
==> Warning: GO_EASY_ON_ME quiets all errors, which is bad practice. Please migrate to Clang directives (e.g., -Wno-<blah> or #pragma clang diagnostic).
==> Compiling Classes/HelloWorldAppliance.mm (armv6)…
Classes/HelloWorldAppliance.mm:69:42: warning: class method
      '+categoryWithName:identifier:preferredOrder:' not found (return type defaults to 'id') [-Wobjc-method-access]
   69 |         id cat = [BRApplianceCategoryCls categoryWithName:@"Hello World"
      |                                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   70 |                                                identifier:@"helloworld"
      |                                                ~~~~~~~~~~~~~~~~~~~~~~~~
   71 |                                            preferredOrder:0];
      |                                            ~~~~~~~~~~~~~~
1 warning generated.
Classes/HelloWorldAppliance.mm:69:42: warning: class method
      '+categoryWithName:identifier:preferredOrder:' not found (return type defaults to 'id') [-Wobjc-method-access]
   69 |         id cat = [BRApplianceCategoryCls categoryWithName:@"Hello World"
      |                                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   70 |                                                identifier:@"helloworld"
      |                                                ~~~~~~~~~~~~~~~~~~~~~~~~
   71 |                                            preferredOrder:0];
      |                                            ~~~~~~~~~~~~~~
1 warning generated.
==> Compiling Classes/HelloWorldController.mm (armv6)…
Classes/HelloWorldController.mm:78:29: error: use of undeclared identifier 'NSTextAlignmentCenter';
      did you mean 'UITextAlignmentCenter'?
   78 |     label.textAlignment   = NSTextAlignmentCenter;
      |                             ^~~~~~~~~~~~~~~~~~~~~
      |                             UITextAlignmentCenter
/Users/hiro/theos/sdks/iPhoneOS4.3.sdk/System/Library/Frameworks/UIKit.framework/Headers/UIStringDrawing.h:24:5: note: 
      'UITextAlignmentCenter' declared here
   24 |     UITextAlignmentCenter,
      |     ^
Classes/HelloWorldController.mm:90:27: error: use of undeclared identifier 'NSTextAlignmentCenter';
      did you mean 'UITextAlignmentCenter'?
   90 |     sub.textAlignment   = NSTextAlignmentCenter;
      |                           ^~~~~~~~~~~~~~~~~~~~~
      |                           UITextAlignmentCenter
/Users/hiro/theos/sdks/iPhoneOS4.3.sdk/System/Library/Frameworks/UIKit.framework/Headers/UIStringDrawing.h:24:5: note: 
      'UITextAlignmentCenter' declared here
   24 |     UITextAlignmentCenter,
      |     ^
2 errors generated.
make[3]: *** [/Users/hiro/Desktop/HelloWorldATV/.theos/obj/armv6/Classes/HelloWorldController.mm.15cf42b1.o] Error 1
make[2]: *** [/Users/hiro/Desktop/HelloWorldATV/.theos/obj/armv6/HelloWorldATV.frappliance/HelloWorldATV] Error 2
make[1]: *** [internal-bundle-all_] Error 2
make: *** [HelloWorldATV.all.bundle.variables] Error 2=== [1/4] Clean ===
[0;36m==> [1;39mCleaning…[m

=== [2/4] Build ===
[0;36m==> [1;36mNotice:[m Build may be slow as Theos isn’t using all available CPU cores on this computer. Consider upgrading GNU Make: https://theos.dev/docs/parallel-building
[1;31m> [1;3;39mMaking all for bundle HelloWorldATV…[m
[0;32m==> [1;39mCompiling Classes/HelloWorldAppliance.mm (armv7)…[m
[0;32m==> [1;39mCompiling Classes/HelloWorldController.mm (armv7)…[m
[0;33m==> [1;39mLinking bundle HelloWorldATV (armv7)…[m
